[package]
name = "bring"
version = "0.0.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.20", features = ["blocking", "json"] }
clap = { version = "4.4.4", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
chrono = "0.4.31"
rpassword = "7.3.1"

[build]
target = "x86_64-pc-windows-msvc"
